Fix tab focus of switch: outline visible when focus within input

--- a/stylesheets/components/switch/_switch.scss
+++ b/stylesheets/components/switch/_switch.scss
@@ -29,6 +29,12 @@
       flex-grow: 0;
       transition: 0.25s;
     }
+
+    &--focused {
+      outline: 2px black solid;
+      outline-offset: 5px;
+      border-radius: 8px;
+    }
   }
 
   &__slider {
